--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,17 @@ knitr::opts_chunk$set(
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://www.tidyverse.org/lifecycle/#stable)
 <!-- badges: end -->
 
-The goal of con2lki is to ...
+LKI is the air quality index used by the Netherlands. The index summarises
+data on air quality. Each substance concentration is converted into a
+number from 1 (little pollution) to 11 (a lot of pollution). The substance
+with the hight index value determines to whole air quality index. If all
+substances have the same index value, the total index value will be one point 
+higher.
+
+This index was created on the basis of scientific studies of the health
+effects of air pollution. From these studies it can be deduced at what
+concentrations a certain percentage of the population can be affected.
+For more information see: https://www.rivm.nl/bibliotheek/rapporten/2014-0050.pdf
 
 ## Installation
 
@@ -32,25 +42,19 @@ install.packages("con2lki")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+This is a basic example:
 
 ```{r example}
 library(con2lki)
-## basic example code
+
+df <- data.frame(
+   no2  = c(15, 30, 100,  1, 201),
+   o3   = c(35, 20,  58,  0, 201),
+   pm10 = c(4,  30, 101,  0, 101),
+   pm25 = c(45, 40,  99,  2, 110)
+)
+
+df$lki = con2lki(df$no2, df$pm25, df$pm10, df$o3)
+
+df
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
