--- a/README.Rmd
+++ b/README.Rmd
@@ -46,6 +46,7 @@ install.packages("con2lki")
 This is a basic example:
 
 ```{r example}
+library(dplyr, quietly = T, warn = F)
 library(con2lki)
 
 df <- data.frame(
@@ -55,7 +56,7 @@ df <- data.frame(
    pm25 = c(45, 40,  99,  2, 110)
 )
 
-df$lki = con2lki(df$no2, df$pm25, df$pm10, df$o3)
-
-df
+df %>% mutate(
+   lki = con2lki(no2, pm25, pm10, o3)
+)
 ```
